# Django_my_timer

./: .dockerignore  .gitignore  Dockerfile_ld  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  docker-compose_postgres.yml  my_task.txt  pyproject.toml
my_timer/: datadump.json  db.sqlite3  manage.py  test.py
my_timer/main/: admin.py  forms.py  models.py  pref.py  urls.py  utility.py  views.py
my_timer/main/static/main/: edit_durable.js  style.css  work_place.js
my_timer/main/templates/my_timer_main/layout/: basic.html
my_timer/main/templates/my_timer_main/main/: client_edit.html  client_list.html  task_edit.html  task_list.html  time_track_edit.html  time_track_list.html  work_place.html
my_timer/main/templates/registration/: login.html
my_timer/main/templatetags/: dav_filter.py
my_timer/my_timer/: settings.py  urls.py  wsgi.py
my_timer_project/: Dockerfile  Dockerfile alpine  entrypoint.prod.sh  pytest.ini  requirements.txt
my_timer_project/api/: serializers.py  urls.py  utily.py  views.py
my_timer_project/main/: admin.py  forms.py  middlewares.py  models.py  urls.py  utility.py  views.py  widgets.py
my_timer_project/main/static/main/: bootstrap-tree_jquery.js  bootstrap-treeview.js  edit_durable.js  edit_time_track.js  main.js  my_test.css  report.css  report.js  select2_dropdown.js  style.css  work_place.js
my_timer_project/main/templates/my_timer_main/layout/: basic.html
my_timer_project/main/templates/my_timer_main/main/: client_edit.html  client_list.html  report.html  report_tasks_clients.html  task_add.html  task_edit.html  task_list.html  time_track_edit.html  time_track_list.html  work_place.html
my_timer_project/main/templates/registration/: password_change.html
my_timer_project/main/templates/widgets/: dav_datetimepicker.html
my_timer_project/my_timer/: asgi.py  settings.py  urls.py
my_timer_project/tests/: conftest.py  test_view.py
nginx/: nginx.conf
